# pyptp

./: .env.example  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
docs/: validation.md
docs/samples/: 01_load_network.py  02_build_network.py  03_modify_network.py  04_validation.py  05_api_client.py  06_logging.py  07_NetworkX.py  08_presentations_required.py  09_common_sheet_rule.py  10_multi_sheet_nodes.py  11_branch_corners.py  __init__.py
pyptp/: network_lv.py
pyptp/IO/exporters/: gnf_exporter.py
pyptp/elements/: element_utils.py  presentation_helpers.py
pyptp/graph/: networkx_converter.py
pyptp/type_reader/: types.xlsx
tests/: ruff.toml  test_network_io.py
tests/_support/: __init__.py  __testing_utils.py  __utils.py
tests/api/: __init__.py
tests/elements/: __init__.py  test_empty_section_handling.py  test_presentation_helpers.py  test_serialization_helpers.py
tests/file_io/: __init__.py
tests/input_files/: AllComponents.gnf  AllComponents.vnf  AllComponents_withpv.vnf  AllComponents_withpv.~vnf  Types.xlsx
tests/lv/: test_comment.py  test_frame.py  test_fuse.py  test_gm_type.py  test_home.py  test_load_switch.py  test_presentations.py  test_profile.py  test_properties.py
tests/mv/: test_comment.py  test_profile.py  test_text.py
tests/regression_tests/: __init__.py  test_allcomponents_gnf.py  test_allcomponents_vnf.py  test_allcomponents_withpv_vnf.py
tests/type_reader/: __init__.py  test_aliases.py  test_excel_helpers.py  test_missing_sheets.py  test_types_workbook_regression.py
tests/validator/: __init__.py  test_base.py  test_registry.py  test_runner.py
(+147 files in other folders)
